--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "vue-tsc": "^3.2.2"
   },
   "dependencies": {
+    "bootstrap": "^5.3.8",
+    "bootstrap-vue-next": "^0.42.0",
     "electron-squirrel-startup": "^1.0.1",
     "pinia": "^3.0.4",
     "vue": "^3.5.26",
