--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "unplugin-vue-components": "^30.0.0",
     "unplugin-vue-router": "^0.19.2",
     "vite": "^7.3.0",
+    "vite-aliases": "^0.11.8",
     "vite-plugin-vue-devtools": "^8.0.5",
     "vitest": "^4.0.16",
     "vue-tsc": "^3.2.2"
