--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "vue-tsc": "^3.2.2"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "bootstrap-vue-next": "^0.42.0",
     "electron-squirrel-startup": "^1.0.1",
