--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@iconify-json/material-symbols": "^1.2.51",
     "@iconify-json/material-symbols-light": "^1.2.51",
     "@tsconfig/node24": "^24.0.3",
+    "@types/bootstrap": "^5.2.10",
     "@types/electron-squirrel-startup": "^1.0.2",
     "@types/jsdom": "^27.0.0",
     "@types/node": "^24.10.4",
