--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "guardepi",
-  "productName": "guardepi",
+  "name": "crawjud",
+  "productName": "CrawJUD",
   "version": "1.0.0",
   "description": "My Electron application description",
   "main": ".vite/build/main.js",
@@ -28,24 +28,24 @@
     "@electron-forge/plugin-fuses": "^7.11.1",
     "@electron-forge/plugin-vite": "^7.11.1",
     "@electron/fuses": "^1.8.0",
-    "@iconify-json/material-symbols": "^1.2.51",
-    "@iconify-json/material-symbols-light": "^1.2.51",
-    "@tsconfig/node24": "^24.0.3",
+    "@iconify-json/material-symbols": "^1.2.52",
+    "@iconify-json/material-symbols-light": "^1.2.52",
+    "@tsconfig/node24": "^24.0.4",
     "@types/bootstrap": "^5.2.10",
     "@types/electron-squirrel-startup": "^1.0.2",
     "@types/jsdom": "^27.0.0",
-    "@types/node": "^24.10.4",
+    "@types/node": "^24.10.9",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-vue": "^6.0.3",
     "@vitejs/plugin-vue-jsx": "^5.1.3",
-    "@vitest/eslint-plugin": "^1.6.5",
-    "@vue/compiler-sfc": "^3.5.26",
+    "@vitest/eslint-plugin": "^1.6.6",
+    "@vue/compiler-sfc": "^3.5.27",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.8.1",
-    "cypress": "^15.8.2",
+    "cypress": "^15.9.0",
     "electron": "39.2.7",
     "eslint": "^9.39.2",
     "eslint-plugin-cypress": "^5.2.1",
@@ -63,19 +63,20 @@
     "unplugin-icons": "^23.0.1",
     "unplugin-vue-components": "^30.0.0",
     "unplugin-vue-router": "^0.19.2",
-    "vite": "^7.3.0",
+    "vite": "^7.3.1",
     "vite-plugin-vue-devtools": "^8.0.5",
-    "vitest": "^4.0.16",
+    "vitest": "^4.0.17",
     "vue-tsc": "^3.2.2"
   },
   "dependencies": {
+    "@electron-forge/maker-wix": "^7.11.1",
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "bootstrap-vue-next": "^0.42.0",
     "electron-squirrel-startup": "^1.0.1",
     "pinia": "^3.0.4",
     "socket.io-client": "^4.8.3",
-    "vue": "^3.5.26",
+    "vue": "^3.5.27",
     "vue-router": "^4.6.4"
   }
 }
