--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
+    "lint": "eslint --ext .ts,.tsx .",
+    "make-debug": "cross-env DEBUG=electron-windows-installer* electron-forge make"
   },
   "keywords": [],
   "author": {
@@ -46,8 +47,10 @@
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.8.1",
+    "cross-env": "^10.1.0",
     "cypress": "^15.9.0",
     "electron": "39.2.7",
+    "electron-wix-msi": "^5.1.3",
     "eslint": "^9.39.2",
     "eslint-plugin-cypress": "^5.2.1",
     "eslint-plugin-import": "^2.32.0",
