✨ feat: adicionar branding     Adiciona componente de branding e ajusta rotas de navegação.
Arquivos Alterados:
    - app/components/CrawJUDBrand.vue: novo componente de branding
    - app/pages/index.vue: atualiza exibição do branding
    - app/pages/login.vue: altera rota de login
    - app/renderer.ts: atualiza configuração do roteador
    - forge.config.ts: ajusta configurações do Vite
    - tsconfig.app.json: atualiza inclusões de tipos
    - tsconfig.node.json: remove tipos desnecessários
    - tsconfig.vitest.json: atualiza inclusões de tipos
    - types/plugins/components.d.ts: adiciona declarações de componentes
    - vite.config.main.ts: novo arquivo de configuração
    - vite.config.preload.ts: novo arquivo de configuração
    - vite.config.renderer.ts: novo arquivo de configuração

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,12 +1,11 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
   "include": [
-    "env.d.ts",
     "app/**/*",
     "app/**/*.vue",
-    "types/**/*",
-    "typing/**/*",
-    "typings/**/*"
+    "./types/*.d.ts",
+    "./types/responses/*.d.ts",
+    "./types/plugins/*.d.ts"
   ],
   "exclude": ["app/**/__tests__/*"],
   "compilerOptions": {
