--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -1,6 +1,11 @@
 {
   "extends": "./tsconfig.app.json",
-  "include": ["app/**/__tests__/*", "env.d.ts"],
+  "include": [
+    "app/**/__tests__/*",
+    "./types/*.d.ts",
+    "./types/responses/*.d.ts",
+    "./types/plugins/*.d.ts"
+  ],
   "exclude": [],
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.vitest.tsbuildinfo",
