🔧 chore: Atualiza dependências     Adiciona overrides para as versões de tar e tmp, garantindo que versões vulneráveis não sejam utilizadas.
Arquivos Alterados:
    - pnpm-workspace.yaml: Adiciona overrides

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,3 +4,7 @@ onlyBuiltDependencies:
   - electron
   - electron-winstaller
   - esbuild
+
+overrides:
+  tar@<=7.5.2: '>=7.5.3'
+  tmp@<=0.2.3: '>=0.2.4'
