--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.11.1",
     "@electron-forge/plugin-fuses": "^7.11.1",
     "@electron-forge/plugin-vite": "^7.11.1",
-    "@electron/fuses": "^1.8.0",
+    "@electron/fuses": "^2.0.0",
     "@eslint/css": "^0.14.1",
     "@eslint/js": "^9.39.2",
     "@eslint/json": "^0.14.0",
@@ -41,9 +41,9 @@
     "@types/bootstrap": "^5.2.10",
     "@types/electron-squirrel-startup": "^1.0.2",
     "@types/jsdom": "^27.0.0",
-    "@types/node": "^24.10.9",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@types/node": "^25.0.9",
+    "@typescript-eslint/eslint-plugin": "^8.53.1",
+    "@typescript-eslint/parser": "^8.53.1",
     "@vitejs/plugin-vue": "^6.0.3",
     "@vitejs/plugin-vue-jsx": "^5.1.3",
     "@vitest/eslint-plugin": "^1.6.6",
@@ -54,25 +54,25 @@
     "@vue/tsconfig": "^0.8.1",
     "cross-env": "^10.1.0",
     "cypress": "^15.9.0",
-    "electron": "39.2.7",
+    "electron": "40.0.0",
     "electron-wix-msi": "^5.1.3",
     "eslint": "^9.39.2",
     "eslint-plugin-cypress": "^5.2.1",
     "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-oxlint": "~1.38.0",
-    "eslint-plugin-vue": "~10.6.2",
+    "eslint-plugin-oxlint": "~1.41.0",
+    "eslint-plugin-vue": "~10.7.0",
     "globals": "^17.0.0",
     "jiti": "^2.6.1",
     "jsdom": "^27.4.0",
     "npm-run-all2": "^8.0.4",
-    "oxlint": "~1.38.0",
-    "prettier": "3.7.4",
+    "oxlint": "~1.41.0",
+    "prettier": "3.8.0",
     "start-server-and-test": "^2.1.3",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.53.1",
     "unplugin-auto-import": "^21.0.0",
     "unplugin-icons": "^23.0.1",
-    "unplugin-vue-components": "^30.0.0",
+    "unplugin-vue-components": "^31.0.0",
     "unplugin-vue-router": "^0.19.2",
     "vite": "^7.3.1",
     "vite-plugin-vue-devtools": "^8.0.5",
@@ -81,6 +81,7 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "axios-cookiejar-support": "^6.0.5",
     "bootstrap": "^5.3.8",
     "bootstrap-vue-next": "^0.42.0",
     "electron-squirrel-startup": "^1.0.1",
@@ -88,6 +89,7 @@
     "pinia": "^3.0.4",
     "pinia-plugin-persistedstate": "^4.7.1",
     "socket.io-client": "^4.8.3",
+    "tough-cookie": "^6.0.0",
     "vue": "^3.5.27",
     "vue-router": "^4.6.4"
   }
