--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "pinia-plugin-persistedstate": "^4.7.1",
     "socket.io-client": "^4.8.3",
     "tough-cookie": "^6.0.0",
+    "vite-plugin-electron-renderer": "^0.14.6",
     "vue": "^3.5.27",
     "vue-router": "^4.6.4"
   }
